# earl-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
earl_sdk/: __init__.py  _http.py  admin_api.py  api.py  auth.py  auth_storage.py  claims.py  client.py  device_flow.py  exceptions.py  models.py  pkce_flow.py  profile_health.py  verifiers_catalog.py
earl_sdk/cli/: __init__.py  __main__.py  _errors.py  app.py  schema.py
earl_sdk/interactive/: __init__.py  __main__.py  app.py  patient_insights_format.py  ui.py
earl_sdk/interactive/flows/: __init__.py  admin.py  browse.py  chat.py  compare.py  config.py  explore.py  run.py
earl_sdk/interactive/storage/: __init__.py  _atomic.py  config_store.py  run_store.py
examples/external-doctor/: README.md  main.py  requirements.txt
man/: earl.1
tests/: internal_results_20260405_213008_20fd9e65-0d69-4db5-ab48-842241d6ef48.json  internal_results_20260406_173934_21b94131-c610-4dbb-829f-16cb3cc47183.json  internal_results_20260414_005940_b902ace1-396a-4acf-8ca0-eae3e5177d0c.json  internal_results_20260414_010745_b4e0e9fb-1701-4a20-8e98-d1d3961a7992.json  internal_results_20260414_010749_f6d03f87-0d81-462f-9ab4-f44c836483bb.json  internal_results_20260414_020041_cb976f90-ae59-49c4-9512-7b1a78eaed02.json  list_recent_simulations.py  test_auth_api.py  test_auth_storage.py  test_cli_auth_login.py  test_cli_errors.py  test_cli_org.py  test_cli_schema.py  test_cli_service_account.py  test_client_driven.py  test_device_flow.py  test_doctors.py  test_external_doctor.py  test_http_freshness.py  test_http_transport.py  test_interactive_dimension_groups.py  test_lumos_judge.py  test_patient_insights_format.py  test_patients_v2.py  test_pkce_flow.py  test_profile_health.py  test_run_progress_label.py  test_sdk.py  test_simulations_wait_backoff.py  test_smoke_full.py  test_verifiers_catalog.py
tests/integration/: README.md  __init__.py  cli_runner.py  conftest.py  requirements-dev.txt  test_01_auth.py  test_02_tenancy.py  test_03_roles.py  test_04_catalog.py  test_05_pipeline.py  test_06_simulation.py  test_07_sa_lifecycle.py  test_08_org_admin.py  test_09_org_admin_cassettes.py
tests/integration/cassettes/: README.md
