[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "earl-sdk"
dynamic = ["version"]
description = "Python SDK for Earl Medical Evaluation Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TheLumos", email = "dmitriy@thelumos.ai" }
]
keywords = [
    "earl",
    "medical",
    "evaluation",
    "ai",
    "healthcare",
    "sdk",
    "reinforcement learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    # HTTP transport with connection pooling + HTTP/2 + gzip. The `h2` extra
    # pulls in hyperframe/hpack for HTTP/2; when it's not available the client
    # transparently falls back to HTTP/1.1.
    "httpx[http2]>=0.27",
]

[project.optional-dependencies]
ui = [
    "rich>=14.3.3",
    "questionary>=2.1.1",
    "prompt_toolkit>=3.0.52",
]
secure = [
    # OS-keyring-backed secret storage (macOS Keychain / Windows Credential
    # Vault / Linux Secret Service). Optional: the SDK falls back to a
    # base64-obfuscated ~/.earl/config.json when this extra is not installed.
    "keyring>=25.0",
]
complete = [
    # Shell tab completion for the `earl` CLI. Activate with:
    #   eval "$(register-python-argcomplete earl)"   # bash / zsh
    "argcomplete>=3.5",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.1",
    "ruff>=0.15.8",
    "mypy>=1.20.0",
    "keyring>=25.0",
    "argcomplete>=3.5",
    # Pinned for mocking httpx in transport tests (no real network).
    "httpx[http2]>=0.27",
]

[project.scripts]
earl-ui = "earl_sdk.interactive.__main__:main"
earl = "earl_sdk.cli:main"

[project.urls]
Homepage = "https://thelumos.ai"
Documentation = "https://docs.thelumos.ai/sdk/python"
Repository = "https://github.com/TheLumos/earl-sdk-python"
Issues = "https://github.com/TheLumos/earl-sdk-python/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
root = ".."

[tool.hatch.build.hooks.vcs]
version-file = "earl_sdk/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["earl_sdk"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
